CAUSEWAY-3989: CommandDto multi-doc i/o support